--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <audio autoplay loop>
+        <source src="Global Forecast (Night) - Forecast Channel Wii OST.mp3">
+    </audio>
     <header>
         <h1>Portátil gaming - HP Victus Gaming 16-s0008ns</h1>
     </header>
@@ -22,17 +25,31 @@
                 <li><a href="#pantalla">Pantalla</a></li>
             </ul>
         </nav>
+
+        <div class="scroll">
+             <div class="victuscroll">
+                <img src="victus.jpg" alt="Parte frontal.">
+                <img src="victus2.jpg" alt="Juego en alta definición, sin reflejos.">
+                <img src="victus3.jpg" alt="Laterales.">
+                <img src="victus4.jpg" alt="Parte trasera.">
+                <img src="victus5.jpg" alt="Todas sus perspectivas.">
+                <img src="victus6.jpg" alt="Teclado luminiscente.">
+                <img src="victus7.jpg" alt="Joven usando un portátil HP Victus 16.">
+            </div>
+         </div>
+
         <section class="component" id="placa_base">
             <h2>Placa base</h2>
             <ul>
                 <li><b>Marca: </b>HP</li>
-                <li><b>Socket de procesador compatible: </b>AMD</li>
+                <li><b>Socket de procesador compatible: </b>AMD i Intel</li>
                 <li><b>Tipus de memòria RAM: </b>DDR5</li>
-                <li><b>Capacitat RAM màxima: </b>32 GB</li>
+                <li><b>Capacitat RAM màxima: </b>32GB</li>
                 <li><b>Tipus d'emmagatzematge compatible: </b>SATA</li>
                 <li><b>Format de la placa base (mida): </b>8BD4</li>
             </ul>
         </section>
+
         <section class="component" id="processador">
             <h2>Processador</h2>
             <ul>
@@ -42,41 +59,48 @@
                 <li><u>Amb 8 nuclis i gràfics integrats</u></li>
             </ul>
         </section>
+
         <section class="component" id="memoria_ram">
             <h2>Memòria RAM</h2>
             <ul>
-                <li>16 GB</li>
-                <li>DDR5</li>
+                <li><b>Capacitat: </b>16GB</li>
+                <li><b>Tipus: </b>DDR5</li>
             </ul>
         </section>
+
         <section class="component" id="emmagatzematge">
             <h2>Emmagatzematge</h2>
             <ul>
-                <li>512 GB</li>
-                <li>SSD</li>
-                <li>Connector per SATA</li>
+                <li><b>Capacitat: </b>512GB</li>
+                <li><b>Tipus: </b>SSD</li>
+                <li><b>Connector: </b>SATA</li>
             </ul>
         </section>
+
         <section class="component" id="carcassa">
             <h2>Carcassa</h2>
             <ul>
-                <li>Format (mida)</li>
+                <li><b>Format: </b>37 x 25 x 2,35cm</li>
             </ul>
         </section>
+
         <section class="component" id="bateria">
             <h2>Bateria</h2>
             <ul>
-                <li>70 Wh</li>
-                <li>Ion-litio, 4 celdas</li>
-                <li>Hasta 7h horas de duración con la carga al 100%</li>
+                <li><b>Potència: </b>70 Wh</li>
+                <li><b>Tipus: </b>Ion-litio</li>
+                <li><b>Nombre de cel·les: </b>4</li>
+                <li><u>Hasta 7h horas de duración con la carga al 100%</u></li>
             </ul>
         </section>
+
         <section class="component" id="pantalla">
             <h2>Pantalla</h2>
             <ul>
-                <li>1920 x 1080 píxels, IPS, 144 Hzs</li>
-                <li>16,1 pulgadas</li>
-                <li>Tipus de connexió amb la placa</li>
+                <li><b>Definició: </b>1920 x 1080 píxels</li>
+                <li><b>Tipus: </b>IPS</li>
+                <li><b>Frequencia: </b>144 Hzs</li>
+                <li><b>Dimensió: </b>16,1"</li>
             </ul>
         </section>
     </main>
