--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <audio autoplay loop>
-        <source src="Global Forecast (Night) - Forecast Channel Wii OST.mp3">
+        <source src="/Ordinador/Global Forecast (Night) - Forecast Channel Wii OST.mp3">
     </audio>
     <header>
         <h1>Portátil gaming - HP Victus Gaming 16-s0008ns</h1>
