--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
         <div class="scroll">
              <div class="victuscroll">
-                <img src="victus.jpg" alt="Parte frontal.">
-                <img src="victus2.jpg" alt="Juego en alta definición, sin reflejos.">
-                <img src="victus3.jpg" alt="Laterales.">
-                <img src="victus4.jpg" alt="Parte trasera.">
-                <img src="victus5.jpg" alt="Todas sus perspectivas.">
-                <img src="victus6.jpg" alt="Teclado luminiscente.">
-                <img src="victus7.jpg" alt="Joven usando un portátil HP Victus 16.">
+                <img src="/Ordinador/victus.jpg" alt="Parte frontal.">
+                <img src="/Ordinador/victus2.jpg" alt="Juego en alta definición, sin reflejos.">
+                <img src="/Ordinador/victus3.jpg" alt="Laterales.">
+                <img src="/Ordinador/victus4.jpg" alt="Parte trasera.">
+                <img src="/Ordinador/victus5.jpg" alt="Todas sus perspectivas.">
+                <img src="/Ordinador/victus6.jpg" alt="Teclado luminiscente.">
+                <img src="/Ordinador/victus7.jpg" alt="Joven usando un portátil HP Victus 16.">
             </div>
          </div>
 
