--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configurador de PC</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Ordinador/styles.css">
 </head>
 <body>
     <audio autoplay loop>
