--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#carcassa">Carcassa</a></li>
                 <li><a href="#bateria">Bateria</a></li>
                 <li><a href="#pantalla">Pantalla</a></li>
+                <li><a href="#preu"><b>Preu</b></a></li>
             </ul>
         </nav>
 
@@ -102,6 +103,11 @@
                 <li><b>Frequencia: </b>144 Hzs</li>
                 <li><b>Dimensió: </b>16,1"</li>
             </ul>
+        </section>
+
+        <section class="component" id="preu">
+            <h2><i><u>PREU</u>: 999,00€</i></h2>
+            <p>(<u>preu tret de MediaMarkt</u>)</p>
         </section>
     </main>
     <footer>
